# SomeGameEngine

./: .gitignore  CMakeLists.txt  CMakeLists_web.txt  Conventions.txt  LICENSE  README.md  actions.h  assets.h  assets_test.c  build.sh  components.h  constants.h  entManager.c  entManager.h  entManager_test.c  entity.h  level_load_test.c  level_select_test.c  level_test.c  lsan_supp.txt  main.c  mempool.c  mempool.h  menu_test.c  particle_test.c  run.sh  run_tests.sh  scene.c  scene.h  scene_impl.c  scene_impl.h  scene_man_test.c  scene_test.c  water_test.c
engine/: AABB.c  AABB.h  CMakeLists.txt  EC.h  README.md  actions.h  assets.c  assets.h  assets_maps.c  assets_maps.h  collisions.c  collisions.h  constants.h  editor_scene.c  engine.c  engine.h  engine_conf.h  entManager.c  game_systems.c  game_systems.h  gui.c  gui.h  mempool.c  mempool.h  menu_impl.c  menu_impl.h  menu_scene.c  particle_sys.c  particle_sys.h  raygui.h  render_queue.c  render_queue.h  rres.c  rres.h  scene.c  scene.h  scene_impl.c  scene_impl.h
engine/EC/: CMakeLists.txt  components.h  entManager.c  entManager.h  entity.h  mempool.c  mempool.h
res/: .gitignore  CMakeLists.txt  ldtk_repacker.py  level_render.py  pack_ldtk.sh  pack_resources.sh  rres_packer.c  testLevels.lvldata  testLevels.lvldata.zst  test_assets.info
sc/: CMakeLists.txt
sc/array/: CMakeLists.txt
sc/heap/: CMakeLists.txt
sc/queue/: CMakeLists.txt
scenes/: CMakeLists.txt  assets_loader.c  assets_loader.h  assets_tag.h  camera_systems.c  components.h  constants.h  editor_scene.c  engine_impl.c  ent_impl.h  game_scene.c  game_systems.c  game_systems.h  items_ent.c  level_select_scene.c  menu_scene.c  player_ent.c  scene_impl.h  scene_systems.c  water_flow.c  water_flow.h
scenes/engine/: AABB.c  AABB.h  CMakeLists.txt  EC.h  actions.h  assets.c  assets.h  collisions.c  collisions.h  engine.c  engine.h  rres.h
scenes/engine/EC/: CMakeLists.txt  EC.h  components.h  entManager.c  entManager.h  entity.h  mempool.c  mempool.h
scenes/engine/EC/sc/map/: CMakeLists.txt
tests/: CMakeLists.txt  test_AABB.c  test_mempool.c
