add_subdirectory(sc)
add_library(lib_engine STATIC
    assets.c
    AABB.c
    gui.c
    engine.c
    collisions.c
    rres.c
    mempool.c
    entManager.c
    particle_sys.c
)
target_include_directories(lib_engine
    PRIVATE
    ${LIBZSTD_DIR}/include
    PUBLIC
    ${CMAKE_CURRENT_LIST_DIR}
    ${RAYLIB_DIR}/include
)
target_link_directories(lib_engine
    PUBLIC
    ${RAYLIB_DIR}/lib
    ${LIBZSTD_DIR}/lib
)
target_link_libraries(lib_engine
    PUBLIC
    zstd
    raylib
    sc_queue
    sc_map
    sc_array
    m
)
