
cmake_minimum_required(VERSION 3.5.1)
project(sc_lib C)
include(CTest)
include(CheckCCompilerFlag)

if (NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE "Release")
endif ()

message(STATUS "Build type ${CMAKE_BUILD_TYPE}")

add_subdirectory(array)
#add_subdirectory(buffer)
#add_subdirectory(condition)
#add_subdirectory(crc32)
add_subdirectory(heap)
#add_subdirectory(ini)
#add_subdirectory(linked-list)
#add_subdirectory(logger)
add_subdirectory(map)
#add_subdirectory(memory-map)
#add_subdirectory(mutex)
#add_subdirectory(option)
add_subdirectory(queue)
#add_subdirectory(perf)
#add_subdirectory(sc)
#add_subdirectory(signal)
#add_subdirectory(socket)
#add_subdirectory(string)
#add_subdirectory(time)
#add_subdirectory(timer)
#add_subdirectory(thread)
#add_subdirectory(uri)
